HTML5 audio .ended event not fired when app in background or phone screen is off https://bugs.webkit.org/show_bug.cgi?id=173332 <rdar://problem/32757402>

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/audio-background-playback-playlist.html

In addition to the necessary WebKit part of this patch, there are behaviors which prevent
websites from enqueuing new playback while in the background. Namely, the platform will
prevent background playback from any application which is not currently the "Now Playing"
application, so in order to allow pages to switch sources, we must ensure we do not give
up "Now Playing" status. To do so, we will change the implementation of canProduceAudio()
to include any media element which previously could produce audio but currently has no
source.

Also, MediaElementSession::canShowControlsManager() will be modified to only check for
a RequireUserGestureToControlControlsManager restriction if the purpose passed in is
is "ControlsManager" and not "NowPlaying".

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::canProduceAudio const):
* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::canShowControlsManager const):

Source/WebKit:

When a WebPage goes from audible to inaudible, allow a short grace period before removing
the activity token, to give the page a chance to (e.g.) move to the next item in a playlist
before the process is suspended when in the background.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):
(WebKit::WebPageProxy::updateThrottleState):
(WebKit::WebPageProxy::clearAudibleActivity):
* UIProcess/WebPageProxy.h:

LayoutTests:

* media/audio-background-playback-playlist-expected.txt: Added.
* media/audio-background-playback-playlist.html: Added.


Canonical link: https://commits.webkit.org/217676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252692 268f45cc-cd09-0410-ab3c-d52691b4dbfc